compiler/src/test/resources/amyc/typer/passing/LetWithError.amy
object LetWithError
  val y: Int = (val x: Int = 1; error("this is fine"));
  y
end LetWithError